--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ h1
 	margin-top: 2%;
 	font-size: 0.8em;
 }
+
 a
 {
 	text-decoration: none;
@@ -154,12 +155,16 @@ a
 	color: rgb(252,202,70);
 	text-align: center;
 	width: 40%;
-	height: 20px;
+	height: 30px;
 	margin: auto;
 	margin-top: 5%;
 	margin-bottom: 5%;
-	border-radius: 11%;
+	border-radius: 12px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
+
 .pied
 {
 	width: 100%;
@@ -171,7 +176,8 @@ a
 	margin: auto;
 	padding: 10px 20px;
 	font-size: 1em;
-	/*position: fixed;*/
+	position: fixed;
+	left: 0;
 	bottom: 0;
 	border-top: 2px solid #a1c181;
 	box-sizing: border-box;
