--- a/css/Menu1.css
+++ b/css/Menu1.css
@@ -1,6 +1,26 @@
-.entré
+.note
 {
-	
+	width: 80%;
+	height: auto;
+	margin-bottom: 25%;
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+.note,h2
+{
+	font-size: 1.1em;
+}
+
+.repas,.prix,.dessert,p
+{
+	font-size: 0.5em;
+	margin: 5px 0px ;
+}
+
+ul 
+{
+	padding: 0;
 }
 
 ul li
@@ -15,7 +35,6 @@ ul li
 {
 	text-align: left;
 	width: 90%;
-
 }
 
 .prix .dessert
@@ -24,17 +43,36 @@ ul li
 	width: 10%;
 }
 
-/*.dessert
+img
 {
-	text-align: left;	
-	width: 	100%;
-}*/
-
-h2
-{
-	font-size: 	5em;
+	width: 35%;
+	max-width: 100%;
+	height: auto;
 }
 
+.intitule
+{
+	display: flex;
+	justify-content: space-between; 
+}
+
+.intitule p
+{
+	font-size: 0.9em;
+	margin: 0; 
+}
+
+.footer-menu
+{
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+}
+
+h4
+{
+	margin-left: 5px;
+}
 
 /*@media all and (min-width: 850px)
 {
