--- a/css/Menu1.css
+++ b/css/Menu1.css
@@ -1,17 +1,3 @@
-.note
-{
-	width: 80%;
-	height: auto;
-	margin-bottom: 25%;
-	padding: 20px;
-	box-sizing: border-box;
-}
-
-.note,h2
-{
-	font-size: 1.1em;
-}
-
 .repas,.prix,.dessert,p
 {
 	font-size: 0.5em;
@@ -22,6 +8,7 @@ ul
 {
 	padding: 0;
 	line-height: 1.7;
+	margin: 5px;
 }
 
 ul li
@@ -42,13 +29,6 @@ ul li
 {
 	text-align: right;
 	width: 10%;
-}
-
-img
-{
-	width: 35%;
-	max-width: 100%;
-	height: auto;
 }
 
 .intitule
