--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ color border top and bottom:
 @font-face
 {
 	font-family: 'devonshire';
-	src: url('contenu/font/Devonshire-Regular.ttf') format("truetype");
+	src: url('../ressources/font/Devonshire-Regular.ttf') format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -41,7 +41,7 @@ color border top and bottom:
 @font-face
 {
 	font-family: 'croissant';
-	src: url('contenu/font/CroissantOne-Regular.ttf') format("truetype");
+	src: url('../ressources/font/CroissantOne-Regular.ttf') format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -49,7 +49,7 @@ color border top and bottom:
 @font-face
 {
 	font-family: 'dancing';
-	src: url('contenu/font/DancingScript-Regular.otf') format("opentype");
+	src: url('../ressources/font/DancingScript-Regular.otf') format("opentype");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,7 +57,7 @@ color border top and bottom:
 @font-face
 {
 	font-family: 'kaushan';
-	src: url('contenu/font/KaushanScript-Regular.ttf') format("truetype");
+	src: url('../ressources/font/KaushanScript-Regular.ttf') format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -79,21 +79,21 @@ h1
 	padding-top: 20px;
 }
 
-.row,h2
-{
-	margin-top: 2%;
-	font-size: 1em;
-}
-
 a
 {
 	text-decoration: none;
 	color: currentColor;
 }
 
-.menu .menu-top p
+.photo
 {
-	font-size: 1em;
+	width: 35%;
+}
+
+img
+{
+	width: 100%;
+	height: auto;
 }
 
 .header
@@ -119,7 +119,17 @@ a
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
-.note
+
+.row,h2
+{
+	margin-top: 2%;
+	font-size: 1em;
+}
+
+
+
+
+.note /*menu 1*/
 {
 	background-color: rgb(253,225,221);
 	color: rgb(60,18,24);
@@ -135,7 +145,7 @@ a
     font-family: devonshire;
 }
 
-.chic
+.chic /*menu 2*/
 {
 	background-color: rgb(255,245,254 );
 	color: rgb(199,116,18);
@@ -151,7 +161,7 @@ a
     font-family: croissant;
 }
 
-.delice
+.delice /*menu 3*/
 {
 	background-color: rgb(249,249,249);
 	color: rgb(131,192,250);
@@ -167,7 +177,7 @@ a
     font-family: dancing;
 }
 
-.palette
+.palette/*menu 4*/
 {
 	background-color: rgb(253,255,253);
 	color: rgb(114,191,86);
@@ -213,15 +223,39 @@ a
 	padding: 10px 20px;
 	font-size: 1em;
 	position: fixed;
-	left: 0;
 	bottom: 0;
 	border-top: 2px solid #a1c181;
 	box-sizing: border-box;
 }
 
-@media all and (min-width: 850px)
+/*****css pour l'ensemble des menu */
+
+.note,.chic,.delice,.palette
 {
-	body
+	width: 80%;
+	height: auto;
+	margin-bottom: 25%;
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+.note,.chic,.delice,.palette,h2
+{
+	font-size: 1.1em;
+}
+
+.note,.delice,.palette p
+{
+	color: black;
+}
+
+
+
+
+
+@media all and (min-width: 800px)
+{
+	main
 	{
 		width: 1500px;
 		height: auto;
@@ -242,9 +276,15 @@ a
 		width: 100%;
 	}
 
+	.titre-menu
+	{
+		margin-bottom: 80px;
+	}
+
 	h2
 	{
 		font-size: 2.2em;
+		margin: 0;
 	}
 
 	.note,.delice
@@ -278,7 +318,6 @@ a
 		height: 140px;
 		font-size: 3em;
 		padding: 35px 30px;
-		box-sizing: border-box;
 	}
 
 	/* Menu La note enchantée 
