--- a/css/Menu2.css
+++ b/css/Menu2.css
@@ -1,52 +1,16 @@
-.repas,.prix,.dessert,p
+.chic
 {
-	font-size: 0.5em;
-	margin: 5px 0px ;
+	width: 80%;
+	height: auto;
+	margin-bottom: 25%;
+	padding: 20px;
+	box-sizing: border-box;
 }
 
-ul 
+.chic,h2
 {
-	padding: 0;
-	line-height: 1.7;
-}
-
-ul li
-{
-	width: 	100%;
-	display: flex;
-	justify-content: space-between;
-	list-style-type: none;	
-}
-
-.repas
-{
-	text-align: left;
-	width: 90%;
-}
-
-.prix .dessert
-{
-	text-align: right;
-	width: 10%;
-}
-
-.intitule
-{
-	display: flex;
-	justify-content: space-between; 
-}
-
-.intitule p
-{
-	font-size: 0.9em;
-	margin: 0; 
-}
-
-.footer-menu
-{
-	display: flex;
-	justify-content: center;
-	align-items: baseline;
+	font-size: 1em;
+	margin-bottom: 45px;
 }
 
 h4
@@ -54,7 +18,18 @@ h4
 	margin-left: 5px;
 }
 
-@media all and (min-width: 850px)
+#color-pink /* color des entrées */
+{
+	color: #a56799
+}
+
+#color-blue /* color des dessert */
+{
+	color: #6e4ccc
+}
+
+
+@media all and (min-width: 800px)
 {
 	.chic
 	{
@@ -63,5 +38,10 @@ h4
 		margin: 195px 158px 135px;
 		font-size: 3em;
 		margin-bottom: 20%;
+	}
+
+	.chic,h2
+	{
+		margin-bottom: 90px;
 	}
 }
