--- a/css/Menu4.css
+++ b/css/Menu4.css
@@ -11,56 +11,24 @@ body
 	font-family: 'kaushan';
 }
 
-.repas,.prix,.dessert,p
+.palette
 {
-	font-size: 0.5em;
-	margin: 5px 0px ;
+	width: 80%;
+	height: auto;
+	margin-bottom: 25%;
+	padding: 20px;
+	box-sizing: border-box;
 }
 
-ul 
+.palette,h2
 {
-	padding: 0;
-	line-height: 1.7;
-
+	font-size: 1em;
+	margin-bottom: 45px;
 }
 
-ul li
+.palette p
 {
-	width: 	100%;
-	display: flex;
-	justify-content: space-between;
-	list-style-type: none;	
-}
-
-.repas
-{
-	text-align: left;
-	width: 90%;
-}
-
-.prix .dessert
-{
-	text-align: right;
-	width: 10%;
-}
-
-.intitule
-{
-	display: flex;
-	justify-content: space-between; 
-}
-
-.intitule p
-{
-	font-size: 0.9em;
-	margin: 0; 
-}
-
-.footer-menu
-{
-	display: flex;
-	justify-content: center;
-	align-items: baseline;
+	color: black;
 }
 
 h4
@@ -68,7 +36,7 @@ h4
 	margin-left: 5px;
 }
 
-@media all and (min-width: 850px)
+@media all and (min-width: 800px)
 {
 	.palette
 	{
@@ -77,5 +45,10 @@ h4
 		margin: 195px 158px 135px;
 		font-size: 3em;
 		margin-bottom: 20%;
+	}
+
+	.palette,h2
+	{
+		margin-bottom: 90px;
 	}
 }
