--- a/css/Menu1.css
+++ b/css/Menu1.css
@@ -47,9 +47,10 @@ h4
 	{
 		width: 1185px;
 		height: 1680px;
-		margin: 195px 158px 135px;
+		margin: auto;
 		font-size: 3em;
-		margin-bottom: 20%;
+		margin-top: 8%;
+		margin-bottom: 10%;
 		padding: 0px 70px;
 	}
 }
