--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ color border top and bottom:
 		#a1c181
 		rgb 161 193 129
 */
+/*********************************************\
+		 		police d'ecriture
+\*********************************************/
 @font-face
 {
 	font-family: 'devonshire';
@@ -62,6 +65,34 @@ color border top and bottom:
 	font-style: normal;
 }
 
+@font-face
+{
+	font-family: 'tinos';
+	src: url('../ressources/font/Tinos-Regular.ttf') format("truetype");
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+@font-face
+{
+	font-family: 'caveat-regular';
+	src: url('../ressources/font/caveat-regular.ttf') format("opentype");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face
+{
+	font-family: 'shortstack';
+	src: url('../ressources/font/ShortStack-Regular.otf') format("opentype");
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+/*********************************************\
+\*********************************************/
 body
 {
 	font-family: Arial, Courier New, Georgia, Times New Roman, Verdana, sans-serif;
@@ -138,6 +169,11 @@ a
     justify-content: center;
     font-family: devonshire;
 }
+
+.font-M1
+{
+	font-family: shortstack;
+}
 /*********************************************\
 		 			Menu 2
 \*********************************************/
@@ -155,6 +191,12 @@ a
     flex-direction: column;
     justify-content: center;
     font-family: croissant;
+}
+
+.font-M2
+{
+	font-family: tinos;
+	font-weight: bold;
 }
 /*********************************************\
 		 			Menu 3
@@ -351,12 +393,7 @@ img
 		padding: 0 120px;
 	}
 
-	.note,.delice
-	{
-		width: 535px;
-		height: 755px;
-		margin: 100px 50px 45px 165px;
-	}
+	
 	/*****************************************\
 	      animation de zoom sur les menus 	
 	\*****************************************/
@@ -368,6 +405,12 @@ img
 	}
 	/******************************************\	
 	\******************************************/
+	.note,.delice
+	{
+		width: 535px;
+		height: 755px;
+		margin: 100px 50px 45px 165px;
+	}
 	.chic,.palette
 	{
 		width: 535px;
@@ -436,22 +479,22 @@ img
 	\*****************************************/
 	.wiggle:hover
 	{
-		animation: wiggle 1s infinite;
+		animation: wiggle 0.9s infinite;
 	}
 			
 	@keyframes wiggle
 	{
-		0%{transform: rotate(0deg)}
-		10%{transform: rotate(-3deg)}
-		20%{transform: rotate(3deg)}
-		30%{transform: rotate(-3deg)}
-		40%{transform: rotate(3deg)}
-		50%{transform: rotate(-3deg)}
-		60%{transform: rotate(3deg)}
-		70%{transform: rotate(-3deg)}
-		80%{transform: rotate(3deg)}
-		90%{transform: rotate(-3deg)}
-		100%{transform: rotate(3deg)}
+		0%{transform: translateX(4px);}
+		10%{transform: translateX(-4px);}
+		20%{transform: translateX(4px);}
+		30%{transform: translateX(-4px);}
+		40%{transform: translateX(4px);}
+		50%{transform: translateX(-4px);}
+		60%{transform: translateX(4px);}
+		70%{transform: translateX(-4px);}
+		80%{transform: translateX(4px);}
+		90%{transform: translateX(-4px);}
+		100%{transform: translateX(4px);}
 	}
 	/*****************************************\
 	\*****************************************/
