--- a/css/style.css
+++ b/css/style.css
@@ -290,15 +290,15 @@ a
 \*********************************************/
 .repas,.prix,.dessert,p
 {
-	font-size: 0.9em;
 	margin: 5px 0px ;
+	font-size: 0.9em;
 }
 
 ul 
 {
 	line-height: 2;
 	font-size: 0.8em;
-	padding: 0 50px;
+	padding: 0 30px;
 }
 
 ul li
@@ -370,6 +370,11 @@ img
 	{
 		margin: 0;
 	}
+
+	ul
+	{
+		padding: 0 120px;
+	}
 	/*****************************************\
 	   			effet de soulignement 	
 	\*****************************************/
@@ -387,14 +392,6 @@ img
 		background-size: 100% 100%;
 	}
 	/*****************************************\
-	\*****************************************/
-	ul
-	{
-		padding: 0 120px;
-	}
-
-	
-	/*****************************************\
 	      animation de zoom sur les menus 	
 	\*****************************************/
 	.effets:hover
@@ -403,8 +400,9 @@ img
 		transition: transform 600ms;
 		opacity: 0.4;
 	}
-	/******************************************\	
-	\******************************************/
+	/*****************************************\
+	     		 tailles des menus
+	\*****************************************/
 	.note,.delice
 	{
 		width: 535px;
