--- a/css/Menu1.css
+++ b/css/Menu1.css
@@ -16,7 +16,7 @@
 
 .note
 {
-	width: 100%;
+	width: 95%;
 	height: auto;
 	margin-bottom: 25%;
 	box-sizing: border-box;
@@ -62,16 +62,50 @@ h4
 	margin-left: 5px;
 }
 
-@media all and (min-width: 1200px)
+@media all and (min-width: 850px)
 {
 	.note
 	{
 		width: 1185px;
 		height: 1680px;
 		margin: auto;
-		font-size: 3em;
+		font-size: 1.8em;
 		margin-top: 8%;
 		margin-bottom: 10%;
 		padding: 0px 70px;
 	}
-}
+
+	.note h2
+	{
+		font-size: 2.8em;
+	}
+	.repas,.prix,.dessert,p
+	{
+		margin: 5px 0px ;
+		font-size: 1em;
+	}
+
+	.intitule p
+	{
+		font-size: 1em;
+		margin: 0; 
+		font-weight: bold;
+	}
+
+	.espace
+	{
+		margin-top: 5%;
+		margin-bottom: 5%;
+	}
+	
+	.espace
+	{
+		margin-top: 5%;
+		margin-bottom: 5%;
+	}
+
+	h4
+	{
+		font-size: 2em;
+		margin: 15px 15px;
+	}
