--- a/css/Menu2.css
+++ b/css/Menu2.css
@@ -1,6 +1,6 @@
 .chic
 {
-	width: 100%;
+	width: 95%;
 	height: auto;
 	margin-bottom: 25%;
 	box-sizing: border-box;
@@ -28,21 +28,41 @@ h4
 }
 
 
-@media all and (min-width: 800px)
+@media all and (min-width: 850px)
 {
 	.chic
 	{
 		width: 1185px;
 		height: 1680px;
 		margin: auto;
-		font-size: 3em;
+		font-size: 2em;
 		margin-top: 8%;
 		margin-bottom: 10%;
-		padding: 0px 70px;
+		padding: 0px 35px;
 	}
 
 	.chic h2
 	{
 		margin-bottom: 90px;
+		font-size: 1.8em;
+	}
+
+	.repas,.prix,.dessert,p
+	{
+		margin: 5px 0px ;
+		font-size: 0.7em;
+	}
+
+	.intitule p
+	{
+		font-size: 0.6em;
+		margin: 0; 
+		font-weight: bold;
+	}
+
+	#color-pink
+	{
+		margin-top: 5%;
+		margin-bottom: 5%;
 	}
 }
