--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ body
 .header
 {	
 	width: 100%;
-	height: 120px;
-	font-size: 1.5em;
+	height: 100px;
+	font-size: 1.2em;
 	background-color: rgb(87,156,135);
 	color: rgb(252,202,70);
 	text-align: center;
@@ -143,7 +143,7 @@ a
 
 .row,h2
 {
-	margin-top: 2%;
+	margin-top: 4%;
 	font-size: 1.1em;
 }
 
@@ -151,12 +151,21 @@ a
 {
 	font-size: 1em;
 }
+
+.effets i
+{
+	background: #f05060;
+    background: linear-gradient(86deg, #f05060 30%, #f6916a 62%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transform: scale(1, 1.2);
+}
 /*********************************************\
 		 			Menu 1
 \*********************************************/
 .note 
 {
-	background-color: rgb(253,225,221);
+	background-color: rgb(252,223,219);
 	color: rgb(60,18,24);
 	text-align: center;
 	width: 44%;
@@ -198,6 +207,16 @@ a
 	font-family: tinos;
 	font-weight: bold;
 }
+
+.chic div h2
+{
+	background: #c67412;
+    background: -webkit-linear-gradient(315deg, #6e4ccc 0%, #a56799 60%, #c67412 80%);
+    background: -o-linear-gradient(315deg, #6e4ccc 0%, #a56799 60%, #c67412 80%);
+    background: linear-gradient(315deg, #6e4ccc 0%, #a56799 60%, #c67412 80%);
+    -webkit-background-clip: text;
+    color: transparent;
+}
 /*********************************************\
 		 			Menu 3
 \*********************************************/
@@ -216,6 +235,16 @@ a
     justify-content: center;
     font-family: dancing;
 }
+
+.delice div h2
+{
+	background: #0228dd;
+    background: linear-gradient(315deg, #0228dd 0%, #0670f3 50%, #229df9 80%);
+    background: -webkit-linear-gradient(315deg, #0228dd 0%, #0670f3 50%, #229df9 80%);
+    background: -moz-linear-gradient(315deg, #0228dd 0%, #0670f3 50%, #229df9 80%);
+    -webkit-background-clip: text;
+    color: transparent;
+}
 /*********************************************\
 		 			Menu 4
 \*********************************************/
@@ -233,6 +262,16 @@ a
     flex-direction: column;
     justify-content: center;
     font-family: kaushan;
+}
+
+.palette div h2
+{
+	 background: #3d923a;
+     background: linear-gradient(315deg, #3d923a 0%, #89d262 40%, #beff7f 60%);
+     background: -webkit-linear-gradient(315deg, #3d923a 0%, #89d262 40%, #beff7f 60%);
+     background: -moz-linear-gradient(315deg, #3d923a 0%, #89d262 40%, #beff7f 60%);
+     -webkit-background-clip: text;
+    color: transparent;
 }
 /*********************************************\
 		 		prochainement
@@ -263,9 +302,6 @@ a
 	align-items: center;	
 	font-size: 1em;
 }
-/*********************************************\
-\*********************************************/
-
 /*********************************************\
 		 		   footer
 \*********************************************/
@@ -350,9 +386,8 @@ img
 	.header
 	{
 		width: 100%;
-		height: 245px;
-		font-size: 4em;
-		text-align: center;
+		height: 200px;
+		font-size: 3em;
 		margin: 0;
 	}
 
